--- a/scrapapp.webui/Views/_ViewImports.cshtml
+++ b/scrapapp.webui/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using scrapapp.entity
-@using scrapapp.webui.ViewModels
+@using scrapapp.webui.Models
