--- a/scrapapp.webui/Views/Admin/RoleEdit.cshtml
+++ b/scrapapp.webui/Views/Admin/RoleEdit.cshtml
@@ -1,10 +1,8 @@
 @model RoleDetails
 
-<h1 class="h3">Edit Role</h1>
-<hr>
+@section title {<title>Edit Role | ScrapApp</title>}
 <div class="row">
     <div class="col-md-12">
-
         <form asp-controller="Admin" asp-action="RoleEdit">
             <input type="hidden" name="RoleId" value="@Model.Role.Id">
             <input type="hidden" name="RoleName" value="@Model.Role.Name">
