--- a/scrapapp.webui/Views/Cart/Index.cshtml
+++ b/scrapapp.webui/Views/Cart/Index.cshtml
@@ -1,7 +1,6 @@
 @model CartModel
 
-<h1 class="h3">Shopping Cart</h1>
-<hr>
+@section title {<title>Shopping Cart | ScrapApp</title>}
 
 @if(Model.CartItems.Count==0)
 {
