--- a/scrapapp.webui/Views/Cart/Orders.cshtml
+++ b/scrapapp.webui/Views/Cart/Orders.cshtml
@@ -1,7 +1,6 @@
 @model List<OrderListModel>
 
-  <h1>Orders</h1>
-  <hr>
+@section title {<title>Orders | ScrapApp</title>}
 
   @foreach (var order in Model)
   {
