--- a/scrapapp.webui/Views/Account/ForgotPassword.cshtml
+++ b/scrapapp.webui/Views/Account/ForgotPassword.cshtml
@@ -1,21 +1,20 @@
-<h1 class="h3">Forgot Password </h1>
-<hr>
-
-<div class="row">
-    <div class="col-md-8">
-        <form asp-controller="Account" asp-action="ForgotPassword" method="POST">
-            <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-                <input class="form-control" type="email" name="Email">
-            </div>
-        </div>         
-
-        <div class="form-group row">
-            <div class="col-sm-10 offset-sm-2">
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-        </div>
-    </form>
+@section title {<title>Forgot | ScrapApp</title>}
+<div class="container-sm mt-5" >
+  <div class="row justify-content-center">
+    <div class="card col-6 p-0">
+      <div class="card-header bg-info">
+        <div class="card-title text-center pt-3">Forgot Password</div>
+      </div>
+      <div class="card-body">
+        <form class=" align-self-center" asp-controller="Account" asp-action="ForgotPassword" method="POST">
+          <div class="form-group row mb-3">
+            <input class="form-control" type="email" name="Email" placeholder="E-Mail">
+          </div>         
+          <div class="form-group row">
+              <button type="submit" class="btn btn-info">Submit</button>
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 </div>
