--- a/scrapapp.webui/Views/Admin/Products.cshtml
+++ b/scrapapp.webui/Views/Admin/Products.cshtml
@@ -1,5 +1,5 @@
-@model ProductListViewModel
-
+@model ProductViewModel
+@section title {<title>Products | ScrapApp</title>}
 <div class="row">
     <div class="col-md-12">
         <h1 class="h3">Admin Products</h1>
@@ -23,7 +23,7 @@
                     @foreach (var item in Model.Products)
                         {
                             <tr>
-                                <td>@item.ProductId</td>
+                                <td>@item.Id</td>
                                 <td><img src="@item.Detail.Image" width="80"></td>
                                 <td>@item.Detail.Name</td>
                                 <td>@item.Price</td>
@@ -36,10 +36,10 @@
                                     }
                                 </td>
                                 <td>
-                                    <a href="/admin/products/@item.ProductId" class="btn btn-primary btn-sm mr-2">Edit</a>
+                                    <a href="/admin/products/@item.Id" class="btn btn-primary btn-sm mr-2">Edit</a>
                                     
                                     <form action="/admin/deleteproduct" method="POST" style="display: inline;">
-                                        <input type="hidden" name="productId" value="@item.ProductId">
+                                        <input type="hidden" name="productId" value="@item.Id">
                                         <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                                     </form>
                                 </td>
@@ -50,8 +50,6 @@
                         <h3>No Products</h3>
                     </div>
                 }
-
-             
             </tbody>
         </table>
     </div>
