--- a/scrapapp.webui/Views/Admin/Roles.cshtml
+++ b/scrapapp.webui/Views/Admin/Roles.cshtml
@@ -1,4 +1,5 @@
 @model IEnumerable<IdentityRole>
+@section title {<title>Role List | ScrapApp</title>}
 
 <div class="row">
     <div class="col-md-12">
@@ -16,15 +17,15 @@
             <tbody>
                 @if(Model.Count()>0)
                 {
-                       @foreach (var item in Model)
+                    @foreach (var item in Model)
                         {
                             <tr>
                                 <td>@item.Id</td>
                                 <td>@item.Name</td>                              
                                 <td>
-                                    <a href="/admin/role/@item.Id" class="btn btn-primary btn-sm mr-2">Edit</a>
+                                    <a href="/Admin/Role/@item.Id" class="btn btn-primary btn-sm mr-2">Edit</a>
                                     
-                                    <form action="/admin/role/delete" method="POST" style="display: inline;">
+                                    <form action="/Admin/Role/Delete" method="POST" style="display: inline;">
                                         <input type="hidden" name="RoleId" value="@item.Id">
                                         <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                                     </form>
@@ -36,8 +37,6 @@
                         <h3>No Roles</h3>
                     </div>
                 }
-
-             
             </tbody>
         </table>
     </div>
