--- a/scrapapp.webui/Views/Home/Detail.cshtml
+++ b/scrapapp.webui/Views/Home/Detail.cshtml
@@ -70,15 +70,15 @@
               <li class="list-group-item me-5 fs-4" style="font-weight: 700;font-size:1rem;border:none;color:#f27a1a">@((int)Model.Price) ₺</li>
           </div>
           <div class="input-group justify-content-center mb-3">
-              <form asp-controller="Cart" asp-action="AddToCart" method="POST" class="form-inline">
-                    <input type="hidden" name="productId" value="@Model.ProductId">
-                    <div class="input-group mb-3">
-                        <input type="number" name="quantity" class="form-control" value="1" min="1" step="1" style="width: 100px;">
-                        <div class="input-group-append">
-                          <button class="btn btn-primary btn-lg" type="submit" style="min-width:100px;background-color:#f27a1a">Add to Cart                                </button>
-                        </div>
-                    </div>     
-                </form>
+            <form asp-controller="Cart" asp-action="AddToCart" method="POST" class="form-inline">
+              <input type="hidden" name="productId" value="@Model.Id">
+              <div class="input-group mb-3">
+                <input type="number" name="quantity" class="form-control" value="1" min="1" step="1" style="width: 100px;">
+                <div class="input-group-append">
+                  <button class="btn btn-primary btn-lg" type="submit" style="min-width:100px;background-color:#f27a1a">Add to Cart                                </button>
+                </div>
+              </div>     
+            </form>
           </div>
         </div>
       </div>
