--- a/scrapapp.webui/Views/Shared/_Layout.cshtml
+++ b/scrapapp.webui/Views/Shared/_Layout.cshtml
@@ -29,15 +29,15 @@
         <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a href="/products" class="nav-link">Products</a>
+              <a href="/Products" class="nav-link">Products</a>
             </li>
             @if (User.Identity.IsAuthenticated)
             {
               <li class="nav-item">
-                <a href="/cart" class="nav-link">Cart</a>
+                <a href="/Cart" class="nav-link">Cart</a>
               </li>
               <li class="nav-item">
-                <a href="/orders" class="nav-link">Orders</a>
+                <a href="/Orders" class="nav-link">Orders</a>
               </li>
               if (User.IsInRole("admin"))
               {
@@ -57,7 +57,7 @@
             @if (User.Identity.IsAuthenticated)
             {
               <li class="nav-item">
-                <a asp-controller="Account" asp-action="Manage" class="nav-link"> @User.Identity.Name </a>
+                <a class="nav-link"> @User.Identity.Name.ToUpper() </a>
               </li>
               <li class="nav-item">
                 <a asp-controller="Account" asp-action="Logout" class="nav-link">Logout</a>
@@ -83,6 +83,6 @@
     @RenderBody()
     <footer id="footer" class="py-5 bg-dark text-white text-center mt-3">Scrap App</footer>
     @RenderSection("JavaScript",false)
-    <script src="~/js/bootstrap.min.js"></script>
+    <script src="~/js/bootstrap.js"></script>
 </body>
 </html>
