--- a/scrapapp.webui/Views/Shared/_Layout.cshtml
+++ b/scrapapp.webui/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a href="/Products" class="nav-link">Products</a>
+              <a href="/" class="nav-link">Products</a>
             </li>
             @if (User.Identity.IsAuthenticated)
             {
