--- a/scrapapp.webui/Views/Shared/_ResultMessage.cshtml
+++ b/scrapapp.webui/Views/Shared/_ResultMessage.cshtml
@@ -1,5 +1,5 @@
 @model AlertMessage
-<div class="row">
+<div class="row mt-3">
     <div class="col-md-12">
         <div class="alert alert-@Model.AlertType">
             <h4 class="alert-title">@Model.Title</h4>
