--- a/scrapapp.webui/Views/Product/RestApi.cshtml
+++ b/scrapapp.webui/Views/Product/RestApi.cshtml
@@ -3,7 +3,7 @@
 @foreach (var item in Model)
 {
     <div>
-        <p>@item.Detail.Name</p>
+        <p>@item.Brand</p>
         <p>@item.Price</p>
     </div>
 }
