--- a/scrapapp.webui/Views/Cart/Index.cshtml
+++ b/scrapapp.webui/Views/Cart/Index.cshtml
@@ -4,10 +4,10 @@
 
 @if(Model.CartItems.Count==0)
 {
-<div class="row">
-  <div class="col-12">
-    <div class="alert alert-warning">
-      Sepetinizde ürün yok.
+<div class="row mt-3">
+  <div class="col-3 mx-auto">
+    <div class="alert alert-warning text-center">
+      There is no item in your cart.
     </div>
   </div>
 </div>
