--- a/scrapapp.webui/Views/Shared/_ResultMessage.cshtml
+++ b/scrapapp.webui/Views/Shared/_ResultMessage.cshtml
@@ -1,7 +1,7 @@
 @model AlertMessage
 <div class="row mt-3">
-    <div class="col-md-12">
-        <div class="alert alert-@Model.AlertType">
+    <div class="col-3 mx-auto">
+        <div class="alert alert-@Model.AlertType text-center">
             <h4 class="alert-title">@Model.Title</h4>
             <p>@Model.Message</p>
         </div>
